# accessories-store

./: .env.example  .pre-commit-config.yaml  README.md  VISION.md  docker-compose.yml  pyproject.toml  requirements.txt  seed.py
alembic/: env.py
alembic/versions/: 6828bdc5f603_create_initial_schema.py
app/: config.py  db.py  main.py  models.py  schemas.py  utils.py
app/docs/: database-design.md
app/docs/adr/: ADR-001-payment-gateway.md
app/routers/: products.py
app/services/: product_service.py
docs/: database-design.md  erd-accessories-store.dot
docs/adr/: ADR-001-payment-gateway.md
tests/: conftest.py  test_products.py
