[project]
name = "accessories-store"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes — unused imports, undefined names
    "I",   # isort — import ordering
    "B",   # flake8-bugbear — likely bugs
    "UP",  # pyupgrade — modernize old syntax
    "C4",  # comprehensions
]
ignore = [
    "B008",  # function call in default argument — required by FastAPI's Depends()
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts are the point in tests
